<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{e108cffc-e753-455e-9249-cb4b18a4135e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT//NovRam Management
		
	Max_IndexNum:UDINT:=40;//Index數量

	//File大小
	//fileRingBufferSize:UDINT:=50*1000;//Byte
	arrFileRingBufferSize:ARRAY [0..1] OF UDINT:=[
	50*1000,//Alarm History
	50*1000//Production History
	];
	
	//資料的陣列長度
	//AlarmHistory_ArrayLength:UDINT:=30;
	//ProductionHistory_ArrayLength:UDINT:=30;
	arrArrayLength:ARRAY[0..1] OF UDINT:=[
	30,//Alarm History
	30//Production History
	];
	
	//NovRam中Array數量
	NovRamBufferRatio:UDINT:=3;
	//arrNovRamBufferRatio:ARRAY [0..1] OF UDINT:=[
	//3,//Alarm History
	//3//Production History
	//];
	
	//單一NovRam Array對應的File數量
	FileRingBufferRatio:UDINT:=7;
	//arrFileRingBufferRatio:ARRAY[0..1] OF UDINT:=[
	//10,//Alarm History
	//10//Production History
	//];
	
	//fileFolder:STRING(255):='c:\_Yenlin\';
	arrFileFolder:ARRAY [0..1] OF STRING(255):=[
	'c:\_Yenlin\',//Alarm History
	'c:\_Yenlin\'//Production History
	];
	
END_VAR

//NovRam
VAR_GLOBAL RETAIN
	NovRamData:ST_NovRam;
END_VAR

VAR_GLOBAL
	
	//Data To NovRam
	fbDataToNovRam:ARRAY[0..Max_IndexNum-1] OF FB_DataToNovRam;//模擬全部Index添加資料用
	//NovRam To FileRingBuffer
	fbNovRamToFileRingBuffer:ARRAY [0..1] OF ARRAY[0..NovRamBufferRatio-1] OF FB_NovRamToFileRingBuffer;
	//fbNovRamToFileRingBuffer_AlarmHistory:ARRAY [0..NovRamBufferRatio-1] OF FB_NovRamToFileRingBuffer;
	//fbNovRamToFileRingBuffer_ProductionHistory:ARRAY [0..NovRamBufferRatio-1] OF FB_NovRamToFileRingBuffer;
	
	//FileRingBuffer To DataBase
	fbFileRingBufferToDB:ARRAY [0..NovRamBufferRatio-1] OF ARRAY[0..FileRingBufferRatio-1] OF FB_FileRingBufferToDB;
	//fbFileRingBufferToDB_AlarmHistory:ARRAY [0..NovRamBufferRatio-1] OF ARRAY[0..FileRingBufferRatio-1] OF FB_FileRingBufferToDB;
	//fbFileRingBufferToDB_ProductionHistory:ARRAY [0..NovRamBufferRatio-1] OF ARRAY[0..FileRingBufferRatio-1] OF FB_FileRingBufferToDB;
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>