<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="PG_Consumer" Id="{62c174cb-6994-498a-a2d1-50bf0c0b0a87}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PG_Consumer
VAR
	i:UDINT;
	k:UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//NovRam to File
FOR i:= 0 TO GVL.NovRamBufferRatio-1 DO
	GVL.fbNovRamToFileRingBuffer[E_StructureType.AlarmHistory][i](udiNovRamIndex:=i,dataType:=E_StructureType.AlarmHistory);
	GVL.fbNovRamToFileRingBuffer[E_StructureType.ProductionHistory][i](udiNovRamIndex:=i,dataType:=E_StructureType.ProductionHistory);
	GVL.fbNovRamToFileRingBuffer[E_StructureType.ProductionReport][i](udiNovRamIndex:=i,dataType:=E_StructureType.ProductionReport);
	GVL.fbNovRamToFileRingBuffer[E_StructureType.ProductionSummary][i](udiNovRamIndex:=i,dataType:=E_StructureType.ProductionSummary);
	GVL.fbNovRamToFileRingBuffer[E_StructureType.SoDuration][i](udiNovRamIndex:=i,dataType:=E_StructureType.SoDuration);
	GVL.fbNovRamToFileRingBuffer[E_StructureType.StopCount][i](udiNovRamIndex:=i,dataType:=E_StructureType.StopCount);
	GVL.fbNovRamToFileRingBuffer[E_StructureType.RegularCheckResults][i](udiNovRamIndex:=i,dataType:=E_StructureType.RegularCheckResults);
	
END_FOR
//File to DB
FOR i:=0 TO gvl.NovRamBufferRatio-1 DO
	FOR k:=0 TO GVL.FileRingBufferRatio-1 DO
		
		gvl.fbFileRingBufferToDB[E_StructureType.AlarmHistory][i][k](udiNovRam_BufferIndex:=i,udiFile_Index:=k,dataType:=E_StructureType.AlarmHistory);
		gvl.fbFileRingBufferToDB[E_StructureType.ProductionHistory][i][k](udiNovRam_BufferIndex:=i,udiFile_Index:=k,dataType:=E_StructureType.ProductionHistory);
		gvl.fbFileRingBufferToDB[E_StructureType.ProductionReport][i][k](udiNovRam_BufferIndex:=i,udiFile_Index:=k,dataType:=E_StructureType.ProductionReport);
		gvl.fbFileRingBufferToDB[E_StructureType.ProductionSummary][i][k](udiNovRam_BufferIndex:=i,udiFile_Index:=k,dataType:=E_StructureType.ProductionSummary);
		gvl.fbFileRingBufferToDB[E_StructureType.SoDuration][i][k](udiNovRam_BufferIndex:=i,udiFile_Index:=k,dataType:=E_StructureType.SoDuration);
		gvl.fbFileRingBufferToDB[E_StructureType.StopCount][i][k](udiNovRam_BufferIndex:=i,udiFile_Index:=k,dataType:=E_StructureType.StopCount);
		gvl.fbFileRingBufferToDB[E_StructureType.RegularCheckResults][i][k](udiNovRam_BufferIndex:=i,udiFile_Index:=k,dataType:=E_StructureType.RegularCheckResults);
		
	END_FOR
END_FOR
]]></ST>
    </Implementation>
    <LineIds Name="PG_Consumer">
      <LineId Id="152" Count="0" />
      <LineId Id="179" Count="1" />
      <LineId Id="244" Count="5" />
      <LineId Id="259" Count="0" />
      <LineId Id="241" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="250" Count="5" />
      <LineId Id="263" Count="0" />
      <LineId Id="172" Count="0" />
      <LineId Id="230" Count="0" />
      <LineId Id="243" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>